Add setup h2 db, script sql for geo data, dependencies version changed in pom, added readme, and some various fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,27 @@
 spring.application.name=TripPlanner
-# H2 Database
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcbapp
-spring.datasource.driver-class-name=org.h2.Driver
+# ===============================
+# DATABASE CONFIGURATION (H2)
+# ===============================
+# Utilizziamo un database su file situato nella cartella ./data del progetto
+spring.datasource.url=jdbc:h2:file:./data/tripplannerdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.password=
+
+# ===============================
+# H2 CONSOLE (Accessibile a http://localhost:8080/h2-console)
+# ===============================
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
+# ===============================
+# INITIALIZATION
+# ===============================
+spring.sql.init.mode=always
+
+spring.sql.init.continue-on-error=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
