Added time of thread.sleep in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=TripPlanner
+# Time that a Thread.sleep requires to compute each Location of an itinerary
+app.thread.time-per-location=4000
 # ===============================
 # DATABASE CONFIGURATION (H2)
 # ===============================
